--- a/manifest.json
+++ b/manifest.json
@@ -5,31 +5,57 @@
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
-    "orientation": "portrait-primary",
+    "description": "ADAA Agility Competition Run Management Tool.",
+    "orientation": "any",
     "prefer_related_applications": false,
     "icons": [
-        {
-            "src": "icons/Icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-maskable-192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable"
-        },
-        {
-            "src": "icons/Icon-maskable-512.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "maskable"
-        }
+	    {
+	      "src": "icons/icon-72x72.png",
+	      "sizes": "72x72",
+	      "type": "image/png",
+	      "purpose": "maskable any"
+	    },
+	    {
+	      "src": "icons/icon-96x96.png",
+	      "sizes": "96x96",
+	      "type": "image/png",
+	      "purpose": "maskable any"
+	    },
+	    {
+	      "src": "icons/icon-128x128.png",
+	      "sizes": "128x128",
+	      "type": "image/png",
+	      "purpose": "maskable any"
+	    },
+	    {
+	      "src": "icons/icon-144x144.png",
+	      "sizes": "144x144",
+	      "type": "image/png",
+	      "purpose": "maskable any"
+	    },
+	    {
+	      "src": "icons/icon-152x152.png",
+	      "sizes": "152x152",
+	      "type": "image/png",
+	      "purpose": "maskable any"
+	    },
+	    {
+	      "src": "icons/icon-192x192.png",
+	      "sizes": "192x192",
+	      "type": "image/png",
+	      "purpose": "maskable any"
+	    },
+	    {
+	      "src": "icons/icon-384x384.png",
+	      "sizes": "384x384",
+	      "type": "image/png",
+	      "purpose": "maskable any"
+	    },
+	    {
+	      "src": "icons/icon-512x512.png",
+	      "sizes": "512x512",
+	      "type": "image/png",
+	      "purpose": "maskable any"
+	    }
     ]
 }
